@@ -513,4 +513,5 @@ DISTFILES =     config/honeywell/th8320zw1000.xml \
     config/evolve/lsm-15.xml \
     config/duwi/ZWESJ300.xml \
     config/zwave.me/ZME_064435.xml \
+    config/wenzhou/tsp01.xml \
     cpp/src/vers.cpp
